test/build_failure/generics1.expect
ERROR: Diff
Type mismatch: Expect = i32, but Actual = '27
Arg at (0)
Type mismatch: Expect = i32, but Actual = '27
Return
Type mismatch: Expect = fun (i32 -> i32) -> i32, but Actual = fun ('27 -> i32) -> W31
File: "", line 4, charactors 10-15

rillc_compile: There are warnings or errors.
